--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 <h1 class="animate__animated animate__bounce">K Fashion</h1> 
 
-<li><a href="index.html">Home</a></li> 
+<ul><li><a href="index.html">Home</a></li>
 <li><a href="about.html">About</a></li>
-<li><a href="contact.html">Contact</a></li> 
+<li><a href="contact.html">Contact</a></li> </ul>
 
 
 
