--- a/index.html
+++ b/index.html
@@ -8,8 +8,21 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
+<style>
 
-</head>
+	nav ul {
+	display: flex;
+	list-style-type: none;
+	padding: 0;
+	background-color: #848484;
+	}
+	
+	nav a {
+	padding: 35px;
+	}
+
+    </style>
+    </head>
 <h1 class="animate__animated animate__bounce">K Fashion</h1> 
 
 <ul><li><a href="index.html">Home</a></li>
