--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 	padding: 35px;
 	}
 
-    </style>
+body {font-family: 'Viaoda Libre', cursive;}
+  
+
+	</style>
     </head>
 <h1 class="animate__animated animate__bounce">K Fashion</h1> 
 
