--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@ body {font-family: 'Viaoda Libre', cursive;}
     </head>
 <h1 class="animate__animated animate__bounce">K Fashion</h1> 
 
-<nav><ul><li><a href="index.html">Home</a></li>
-<li><a href="about.html">About</a></li>
-	<li><a href="contact.html">Contact</a></li> </ul></nav>
+<nav><ul><li><a href="home.html">Home</a></li> 
+<li><a href="clothes.html">Clothes</a></li>
+<li><a href="Accessories.html">Accessories</a></li> 
+</ul></nav>
 
 
 
