--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ body {font-family: 'Viaoda Libre', cursive;}
 
 <img src="https://www.datocms-assets.com/39109/1617621452-saint-laurent-digital-fashion-week.jpg?auto=format%2Ccompress" width="700" height="500">
 
-<p>K Fashion is a fashion company where we provide the best and unique pieces of clothes to help you feel like youself and better whether it's shoes or just a shirt we are here to find your own color </p>
+<p>K Fashion is a fashion company where we provide the best and most unique pieces of clothes to help you feel like youself and better whether it's shoes or just a shirt we are here to find your own color </p>
 
 </body>
 </html>
