--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <head>
     
 <html>
-<body style="background-color:#edfbfc;">
+<body>
 
 <head>
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
-<style>
+  /> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" >
+
+	<style>
 
 	nav ul {
 	display: flex;
