--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body {font-family: 'Viaoda Libre', cursive;}
 
 	</style>
     </head>
-<h1 class="animate__animated animate__bounce">K Fashion</h1> 
+<img src=" 
 
 <nav><ul><li><a href="home.html">Home</a></li> 
 <li><a href="clothes.html">Clothes</a></li>
