--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@ body {font-family: 'Viaoda Libre', cursive;}
 
 	</style>
     </head>
-<img src=" 
-
+<img src="kfashlogo.png">
 <nav><ul><li><a href="home.html">Home</a></li> 
 <li><a href="clothes.html">Clothes</a></li>
 <li><a href="Accessories.html">Accessories</a></li> 
