--- a/index.html
+++ b/index.html
@@ -38,9 +38,13 @@ body {font-family: 'Viaoda Libre', cursive;}
 <img src="https://www.datocms-assets.com/39109/1617621452-saint-laurent-digital-fashion-week.jpg?auto=format%2Ccompress" width="700" height="500">
 
 <p>K Fashion is a fashion company where we provide the best and most unique pieces of clothes to help you feel like youself and better. Whether&mdash; it's accessories or just a shirt we are here to find your own color </p>
-
-</body>
-</html>
+<div class="col-xs-1
+	    col-sm-2
+	    col-md-4
+	    col-lg-6"><1
+class="fab fa-instagram-square"></i></body>
+<i class="fab fa-snapchat-square"></i>
+	</html>
 
 
 
