--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@ body {font-family: 'Viaoda Libre', cursive;}
 	    col-md-4
 	    col-lg-6"><1
 class="fab fa-instagram-square"></i></body>
-<i class="fab fa-snapchat-square"></i>
+	<i class="fab fa-snapchat-square"></i></div>
+	
+
 	</html>
 
 
