--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ body {font-family: 'Viaoda Libre', cursive;}
 	    col-sm-2
 	    col-md-4
 	    col-lg-6"><1
-class="fab fa-instagram-square"></i></body>
+<i class="fab fa-instagram-square"></i></body>
 	<i class="fab fa-snapchat-square"></i></div>
 	
 
