--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ body {font-family: 'Viaoda Libre', cursive;}
 <div class="col-xs-1
 	    col-sm-2
 	    col-md-4
-	    col-lg-6"><1
+	    col-lg-6">
 <i class="fab fa-instagram-square"></i></body>
 	<i class="fab fa-snapchat-square"></i></div>
 	
