--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@ body {font-family: 'Viaoda Libre', cursive;}
 <i class="fab fa-instagram-square"></i></body>
 	<i class="fab fa-snapchat-square"></i></div>
 	
-
+	<div> "store hours"</div>
+	<div> "monday-friday 9:00-6:00"</div>
+	<div> "saturday 10:00-7:00"</div>
+	<div> "sunday closet"</div>
 	</html>
 
 
