--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body {font-family: 'Viaoda Libre', cursive;}
 
 	</style>
     </head>
-<img src="kfashlogo.png"> 
+<img src="kfashlogo.png" class="logo"> 
 <nav><ul><li><a href="home.html">Home</a></li> 
 <li><a href="clothes.html">Clothes</a></li>
 <li><a href="Accessories.html">Accessories</a></li> 
