--- a/index.html
+++ b/index.html
@@ -31,13 +31,16 @@ body {font-family: 'Viaoda Libre', cursive;}
 <li><a href="clothes.html">Clothes</a></li>
 <li><a href="Accessories.html">Accessories</a></li> 
 </ul></nav>
-
-
-
-<img src="https://www.datocms-assets.com/39109/1617621452-saint-laurent-digital-fashion-week.jpg?auto=format%2Ccompress" width="700" height="500">
-
-<p>K Fashion is a fashion company where we provide the best and most unique pieces of clothes to help you feel like youself and better. Whether&mdash; it's accessories or just a shirt we are here to find your own color </p>
-<div class="col-xs-1
+<img src="trinh-minh-th-MQOA0n3chA8-unsplash.jpg">
+<img src="antonio-uquiche-xD_XnntwCw0-unsplash.jpg">
+<img src="cornelia-ng-hxtKsjWSd3M-unsplash.jpg">
+<img src="cornelia-ng-zZLhoEwGCeM-unsplash.jpg">
+<img src="creative-headline-se3GNrXjtdQ-unsplash.jpg"
+<img src="irene-kredenets-pSVYyO-XlJk-unsplash.jpg"
+<img src="max-anderson-acCPKySN8Xc-unsplash.jpg"
+<img src="olive-tatiane-ImEzF9B91Mk-unsplash.jpg"
+     
+     col-xs-1
 	    col-sm-2
 	    col-md-4
 	    col-lg-6">
