--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
-<head>
-    
-<html>
-<body>
+
 
 <head>
   <link
@@ -35,24 +32,24 @@ body {font-family: 'Viaoda Libre', cursive;}
 <img src="antonio-uquiche-xD_XnntwCw0-unsplash.jpg">
 <img src="cornelia-ng-hxtKsjWSd3M-unsplash.jpg">
 <img src="cornelia-ng-zZLhoEwGCeM-unsplash.jpg">
-<img src="creative-headline-se3GNrXjtdQ-unsplash.jpg"
-<img src="irene-kredenets-pSVYyO-XlJk-unsplash.jpg"
-<img src="max-anderson-acCPKySN8Xc-unsplash.jpg"
-<img src="olive-tatiane-ImEzF9B91Mk-unsplash.jpg"
-     
+<img src="creative-headline-se3GNrXjtdQ-unsplash.jpg">
+<img src="irene-kredenets-pSVYyO-XlJk-unsplash.jpg">
+<img src="max-anderson-acCPKySN8Xc-unsplash.jpg">
+<img src="olive-tatiane-ImEzF9B91Mk-unsplash.jpg">
+  <div class="   
      col-xs-1
 	    col-sm-2
 	    col-md-4
 	    col-lg-6">
-<i class="fab fa-instagram-square"></i></body>
+<i class="fab fa-instagram-square"></i>
 	<i class="fab fa-snapchat-square"></i></div>
 	
 	<div> store hours</div>
 	<div> monday-friday 9:00-6:00</div>
 	<div> saturday 10:00-7:00</div>
 	<div> sunday closet</div>
+	</body>
 	</html>
-
 
 
  
