--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 	display: flex;
 	list-style-type: none;
 	padding: 0;
-	background-color: #c2d1e5;
+	background-color:#c2d1e5;
 	}
 	
 	nav a {
 	padding: 35px;
 	}
-
+<link rel = "stylesheet" href = "columns.css" />
 body {font-family: 'Viaoda Libre', cursive;}
   
 
