--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 	display: flex;
 	list-style-type: none;
 	padding: 0;
-	background-color:yellow;
-	}
+	background-color:#c2d1e5;	}
 	
 	nav a {
 	padding: 35px;
