--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ body {font-family: 'Viaoda Libre', cursive;}
 <li><a href="clothes.html">Clothes</a></li>
 <li><a href="Accessories.html">Accessories</a></li> 
 </ul></nav>
+<img src="emma-matthews-digital-content-production-5-o5Xe_IwcQ-unsplash.jpg">	 
 <img src="trinh-minh-th-MQOA0n3chA8-unsplash.jpg">
 <img src="antonio-uquiche-xD_XnntwCw0-unsplash.jpg">
 <img src="cornelia-ng-hxtKsjWSd3M-unsplash.jpg">
