--- a/index.html
+++ b/index.html
@@ -16,18 +16,16 @@
 	nav a {
 	padding: 35px;
 	}
-<link rel = "stylesheet" href = "columns.css" />
-body {font-family: 'Viaoda Libre', cursive;}
-  
-
 	</style>
-    </head>
-<img src="kfashlogo.png" class="logo"> 
+<link rel = "stylesheet" href = "columns.css" />
+	</head>
+body {font-family: 'Viaoda Libre', cursive;}
+ <div class="columncontainer"> <img class="column" src="emma-matthews-digital-content-production-5-o5Xe_IwcQ-unsplash.jpg">
+<img class="column" src="kfashlogo.png" class="logo"> </div>
 <nav><ul><li><a href="home.html">Home</a></li> 
 <li><a href="clothes.html">Clothes</a></li>
 <li><a href="Accessories.html">Accessories</a></li> 
 </ul></nav>
-<img src="emma-matthews-digital-content-production-5-o5Xe_IwcQ-unsplash.jpg">	 
 <img src="trinh-minh-th-MQOA0n3chA8-unsplash.jpg">
 <img src="antonio-uquiche-xD_XnntwCw0-unsplash.jpg">
 <img src="cornelia-ng-hxtKsjWSd3M-unsplash.jpg">
