--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 	nav a {
 	padding: 35px;
 	}
+	body {font-family: 'Viaoda Libre', cursive;}	
 	</style>
 <link rel = "stylesheet" href = "columns.css" />
 	</head>
-body {font-family: 'Viaoda Libre', cursive;}
+<body>
  <div class="columncontainer"> <img class="column" src="emma-matthews-digital-content-production-5-o5Xe_IwcQ-unsplash.jpg">
 <img class="column" src="kfashlogo.png" class="logo"> </div>
 <nav><ul><li><a href="home.html">Home</a></li> 
