--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 	nav a {
 	padding: 35px;
 	}
-	body {font-family: 'Viaoda Libre', cursive;}	
+	body {font-family: 'Viaoda Libre', cursive;}
+	img{width: 150px;}
 	</style>
 <link rel = "stylesheet" href = "columns.css" />
 	</head>
