--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-
+<html>
 <head>
   <link
     rel="stylesheet"
@@ -22,13 +22,15 @@
 <link rel = "stylesheet" href = "columns.css" />
 	</head>
 <body>
- <div class="columncontainer"> <img class="column" src="emma-matthews-digital-content-production-5-o5Xe_IwcQ-unsplash.jpg">
-<img class="column" src="kfashlogo.png" class="logo"> </div>
+ <div class="columncontainer"> 
+	<div class="column"> <img src="emma-matthews-digital-content-production-5-o5Xe_IwcQ-unsplash.jpg"> </div>
+	 <div  clas="column"> <img src="kfashlogo.png" class="logo"> </div>
+	</div>
 <nav><ul><li><a href="home.html">Home</a></li> 
 <li><a href="clothes.html">Clothes</a></li>
 <li><a href="Accessories.html">Accessories</a></li> 
 </ul></nav>
-<img src="trinh-minh-th-MQOA0n3chA8-unsplash.jpg">
+<img src="trinh-minh-th-MQOA0n3chA8-unsplash.jpg"> 
 <img src="antonio-uquiche-xD_XnntwCw0-unsplash.jpg">
 <img src="cornelia-ng-hxtKsjWSd3M-unsplash.jpg">
 <img src="cornelia-ng-zZLhoEwGCeM-unsplash.jpg">
