--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
  <div class="columncontainer"> 
 	<div class="column"> <img src="emma-matthews-digital-content-production-5-o5Xe_IwcQ-unsplash.jpg"> </div>
-	 <div  clas="column"> <img src="kfashlogo.png" class="logo"> </div>
+	 <div  class="column"> <img src="kfashlogo.png" class="logo"> </div>
 	</div>
 <nav><ul><li><a href="home.html">Home</a></li> 
 <li><a href="clothes.html">Clothes</a></li>
