--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 	padding: 35px;
 	}
 	body {font-family: 'Viaoda Libre', cursive;}
-	img{width: 150px;}
+	img{width: 150px;} 
+	background-color:light pink;
 	</style>
 <link rel = "stylesheet" href = "columns.css" />
 	</head>
