--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	}
 	body {font-family: 'Viaoda Libre', cursive;}
 	img{width: 150px;} 
-	background-color:light pink;
+	background-color:pink;
 	</style>
 <link rel = "stylesheet" href = "columns.css" />
 	</head>
