--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 	nav a {
 	padding: 35px;
 	}
-	body {font-family: 'Viaoda Libre', cursive; 
-		background-color:#b6e5e6;		} 	
+	body 
+			{
+				font-family: 'Viaoda Libre', cursive;
+                background-color:#b6e5e6;
+			}
 		img{width: 150px;} 
 	</style>
 <link rel = "stylesheet" href = "columns.css" />
