--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 	body 
 			{
 				font-family: 'Viaoda Libre', cursive;
-                background-color:#b6e5e6;
+                background-color:#c2d1e5;
+
 			}
 		img{width: 150px;} 
 	</style>
