--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	display: flex;
 	list-style-type: none;
 	padding: 0;
-	background-color:#c2d1e5;	}
+	background-color:#fbc6d0;	}
 	
 	nav a {
 	padding: 35px;
