--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
 <img src="cornelia-ng-zZLhoEwGCeM-unsplash.jpg">
 <img src="max-anderson-acCPKySN8Xc-unsplash.jpg">
 <img src="olive-tatiane-ImEzF9B91Mk-unsplash.jpg">
-  <div class="   
-     col-xs-1
+ <img src="alex-iby-Pd585pphU-4-unsplash (1).jpg">	
+<div class="   
+            col-xs-1
 	    col-sm-2
 	    col-md-4
 	    col-lg-6">
