--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 	</div>
 <nav><ul><li><a href="home.html">Home</a></li> 
 <li><a href="clothes.html">Clothes</a></li>
+<li><a href="Jewelry.html">Jewelry/a></li>
 <li><a href="Accessories.html">Accessories</a></li> 
 </ul></nav>
 <img src="marionel-luciano-f615lHRUJqw-unsplash (1).jpg">
