--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	</div>
 <nav><ul><li><a href="home.html">Home</a></li> 
 <li><a href="clothes.html">Clothes</a></li>
-<li><a href="Jewelry.html">Jewelry/a></li>
+<li><a href="Jewelry.html">Jewelry</a></li>
 <li><a href="Accessories.html">Accessories</a></li> 
 </ul></nav>
 <img src="marionel-luciano-f615lHRUJqw-unsplash (1).jpg">
@@ -49,7 +49,7 @@
 	<div> store hours</div>
 	<div> monday-friday 9:00-6:00</div>
 	<div> saturday 10:00-7:00</div>
-	<div> sunday closet</div>
+	<div> sunday closed</div>
 	</body>
 	</html>
 
