--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 <li><a href="Accessories.html">Accessories</a></li> 
 </ul></nav>
 <img src="marionel-luciano-f615lHRUJqw-unsplash (1).jpg">
-<img src="cornelia-ng-hxtKsjWSd3M-unsplash.jpg">
-<img src="cornelia-ng-zZLhoEwGCeM-unsplash.jpg">
+<img src="">
+<img src="">
 <img src="max-anderson-acCPKySN8Xc-unsplash.jpg">
 <img src="olive-tatiane-ImEzF9B91Mk-unsplash.jpg">
- <img src="alex-iby-Pd585pphU-4-unsplash (1).jpg">	
+ <img src="">	
 <div class="   
             col-xs-1
 	    col-sm-2
