--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</head>
 <body>
  <div class="columncontainer"> 
-	<div class="column"> <img src=""> </div>
+	<div class="column"> </div>
 	 <div  class="column"> <img src="kfashlogo.png" class="logo"> </div>
 	</div>
 <nav><ul><li><a href="home.html">Home</a></li> 
