--- a/Clothes.html
+++ b/Clothes.html
@@ -1,1 +1,47 @@
-
+<head>
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  /> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" >
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />	<style>
+	.logo {width: 20%;}
+	nav ul {
+	display: flex;
+	list-style-type: none;
+	padding: 0;
+	background-color:#c2d1e5;	}
+	
+	nav a {
+	padding: 35px;
+	}
+<link rel = "stylesheet" href = "columns.css" />
+body {font-family: 'Viaoda Libre', cursive;}
+  </style>
+    </head>
+<img src="kfashlogo.png" class="logo"> 
+<nav><ul><li><a href="home.html">Home</a></li> 
+<li><a href="clothes.html">Clothes</a></li>
+<li><a href="Accessories.html">Accessories</a></li> 
+</ul></nav>
+<img src="trinh-minh-th-MQOA0n3chA8-unsplash.jpg">
+<img src="antonio-uquiche-xD_XnntwCw0-unsplash.jpg">
+<img src="cornelia-ng-hxtKsjWSd3M-unsplash.jpg">
+<img src="cornelia-ng-zZLhoEwGCeM-unsplash.jpg">
+<img src="creative-headline-se3GNrXjtdQ-unsplash.jpg">
+<img src="irene-kredenets-pSVYyO-XlJk-unsplash.jpg">
+<img src="max-anderson-acCPKySN8Xc-unsplash.jpg">
+<img src="olive-tatiane-ImEzF9B91Mk-unsplash.jpg">
+  <div class="   
+     col-xs-1
+	    col-sm-2
+	    col-md-4
+	    col-lg-6">
+<i class="fab fa-instagram-square"></i>
+	<i class="fab fa-snapchat-square"></i></div>
+	
+	<div> store hours</div>
+	<div> monday-friday 9:00-6:00</div>
+	<div> saturday 10:00-7:00</div>
+	<div> sunday closet</div>
+	</body>
+	</html>
