--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	background-color:#fbc6d0;	}
 	
 	nav a {
-	padding: 35px;
+	padding: 75px;
 	}
 	body 
 			{
@@ -18,7 +18,9 @@
                 background-color:#c2d1e5;
 
 			}
-		img{width: 150px;} 
+		img{width: 150px;
+		padding: 55px; 
+		} 
 	</style>
 <link rel = "stylesheet" href = "columns.css" />
 	</head>
