--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
 	<div class="column"> </div>
 	 <div  class="column"> <img src="kfashlogo.png" class="logo"> </div>
 	</div>
-<nav><ul><li><a href="home.html">Home</a></li> 
-kfashion/Clothes.html	
-<li><a href="clothes.html">Clothes</a></li>
+	
+<li><a href="kfashion/Clothes.html">Clothes</a></li>
 <li><a href="Jewelry.html">Jewelry</a></li>
 <li><a href="Accessories.html">Accessories</a></li> 
 </ul></nav>
