--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 	<div class="column"> </div>
 	 <div  class="column"> <img src="kfashlogo.png" class="logo"> </div>
 	</div>
-	
-<li><a href="kfashion/Clothes.html">Clothes</a></li>
+<nav><ul><li><a href="home.html">Home</a></li> 	
+<li><a href="kfashion/clothes.html">Clothes</a></li>
 <li><a href="Jewelry.html">Jewelry</a></li>
 <li><a href="Accessories.html">Accessories</a></li> 
 </ul></nav>
