--- a/Clothes.html
+++ b/Clothes.html
@@ -34,7 +34,7 @@
 <li><a href="Accessories.html">Accessories</a></li> 
 </ul></nav>
 <img src="trinh-minh-th-MQOA0n3chA8-unsplash.jpg">
-
+<img src="joeyy-lee-oHtvy55fzzQ-unsplash.jpg">
   <div class="   
      col-xs-1
 	    col-sm-2
