--- a/Clothes.html
+++ b/Clothes.html
@@ -35,6 +35,8 @@
 </ul></nav>
 <img src="trinh-minh-th-MQOA0n3chA8-unsplash.jpg">
 <img src="joeyy-lee-oHtvy55fzzQ-unsplash.jpg"> 
+<img src="knight-duong-77iyep3uIjg-unsplash.jpg">
+
   <div class="   
      col-xs-1
 	    col-sm-2
