--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	</div>
 <nav><ul><li><a href="home.html">Home</a></li> 	
 <li><a href="https://karla1369.github.io/Kfashion/Clothes.html">Clothes</a></li>
-<li><a href="Jewelry.html">Jewelry</a></li>
+<li><a href="jewelry.html">Jewelry</a></li>
 <li><a href="Accessories.html">Accessories</a></li> 
 </ul></nav>
 <img src="marionel-luciano-f615lHRUJqw-unsplash (1).jpg">
