--- a/Clothes.html
+++ b/Clothes.html
@@ -31,6 +31,7 @@
 <img src="kfashlogo.png" class="logo"> 
 <nav><ul><li><a href="home.html">Home</a></li> 
 <li><a href="clothes.html">Clothes</a></li>
+<li><a href="jewelry.html">Jewelry</a></li>
 <li><a href="Accessories.html">Accessories</a></li> 
 </ul></nav>
 <img src="trinh-minh-th-MQOA0n3chA8-unsplash.jpg">
