--- a/Clothes.html
+++ b/Clothes.html
@@ -34,9 +34,9 @@
 <li><a href="jewelry.html">Jewelry</a></li>
 <li><a href="Accessories.html">Accessories</a></li> 
 </ul></nav>
-<img src="joeyy-lee-oHtvy55fzzQ-unsplash.jpg"> 
-<img src="knight-duong-77iyep3uIjg-unsplash.jpg">
-<img src="roman-shilin-Wx8pnzc9bRk-unsplash.jpg">  
+<img src= class="product-image" "joeyy-lee-oHtvy55fzzQ-unsplash.jpg"> 
+<img src= class="product-image" "knight-duong-77iyep3uIjg-unsplash.jpg">
+<img src= class="product-image" "roman-shilin-Wx8pnzc9bRk-unsplash.jpg">  
 <div class="   
      col-xs-1
 	    col-sm-2
