--- a/Clothes.html
+++ b/Clothes.html
@@ -36,7 +36,7 @@
 <li><a href="jewelry.html">Jewelry</a></li>
 <li><a href="Accessories.html">Accessories</a></li> 
 </ul></nav>
-<img src= class="product-image" "joeyy-lee-oHtvy55fzzQ-unsplash.jpg"> 
+<img class= "product-image" "joeyy-lee-oHtvy55fzzQ-unsplash.jpg"> 
 <img src= class="product-image" "knight-duong-77iyep3uIjg-unsplash.jpg">
 <img src= class="product-image" "roman-shilin-Wx8pnzc9bRk-unsplash.jpg">  
 <div class="   
