--- a/Clothes.html
+++ b/Clothes.html
@@ -37,8 +37,8 @@
 <li><a href="Accessories.html">Accessories</a></li> 
 </ul></nav>
 <img class= "product-image" "joeyy-lee-oHtvy55fzzQ-unsplash.jpg"> 
-<img src= class="product-image" "knight-duong-77iyep3uIjg-unsplash.jpg">
-<img src= class="product-image" "roman-shilin-Wx8pnzc9bRk-unsplash.jpg">  
+<img class= "product-image" "product-image" "knight-duong-77iyep3uIjg-unsplash.jpg">
+<img class="product-image" "roman-shilin-Wx8pnzc9bRk-unsplash.jpg">  
 <div class="   
      col-xs-1
 	    col-sm-2
