--- a/Clothes.html
+++ b/Clothes.html
@@ -36,9 +36,9 @@
 <li><a href="jewelry.html">Jewelry</a></li>
 <li><a href="Accessories.html">Accessories</a></li> 
 </ul></nav>
-<img class= "product-image" "joeyy-lee-oHtvy55fzzQ-unsplash.jpg"> 
-<img class= "product-image" "product-image" "knight-duong-77iyep3uIjg-unsplash.jpg">
-<img class="product-image" "roman-shilin-Wx8pnzc9bRk-unsplash.jpg">  
+<img class= "product-image" src="joeyy-lee-oHtvy55fzzQ-unsplash.jpg"> 
+<img class= "product-image" src="product-image" "knight-duong-77iyep3uIjg-unsplash.jpg">
+<img class="product-image"  src="roman-shilin-Wx8pnzc9bRk-unsplash.jpg">  
 <div class="   
      col-xs-1
 	    col-sm-2
