--- a/Clothes.html
+++ b/Clothes.html
@@ -25,9 +25,9 @@
 		img{width: 200px;
 		padding: 85px; 
 		} 
-	.product-image {padding: 1rem; background-color: #fff; box-shadow: 5px 5px 15px 5px #000000;}	
-	
-</style>
+	.product-image {padding: 1rem; background-color: #fff; 	
+		box-shadow: 5px 5px 15px 5px #000000;}
+	</style>
  
     </head>
 <img src="kfashlogo.png" class="logo"> 
