--- a/Accessories.html
+++ b/Accessories.html
@@ -29,7 +29,7 @@
  
     </head>
 <img src="kfashlogo.png" class="logo"> 
-<nav><ul><li><a href="home.html">Home</a></li> 
+<nav><ul><li><a href="index.html">Home</a></li> 
 <li><a href="clothes.html">Clothes</a></li>
 <li><a href="Accessories.html">Accessories</a></li> 
 </ul></nav>
