--- a/jewelry.html
+++ b/jewelry.html
@@ -33,7 +33,7 @@
 <li><a href="clothes.html">Clothes</a></li>
 <li><a href="Accessories.html">Accessories</a></li> 
 </ul></nav>
-<img class= "product-image" src=
+<img class= "product-image" src= "philippe-van-doninck-7IUKOXTVPEg-unsplash.jpg">
 
 
 
