--- a/jewelry.html
+++ b/jewelry.html
@@ -34,7 +34,7 @@
 <li><a href="Accessories.html">Accessories</a></li> 
 </ul></nav>
 <img class= "product-image" src= "philippe-van-doninck-7IUKOXTVPEg-unsplash.jpg">
-
+<img class= "product-image" src= "mathilde-langevin-f1FkoppimsA-unsplash.jpg">
 
 
 
