--- a/jewelry.html
+++ b/jewelry.html
@@ -35,7 +35,7 @@
 </ul></nav>
 <img class= "product-image" src= "philippe-van-doninck-7IUKOXTVPEg-unsplash.jpg">
 <img class= "product-image" src= "mathilde-langevin-f1FkoppimsA-unsplash.jpg">
-
+<img class= "product-image" src= "luisana-galicia-rGz2Z6tVaeg-unsplash.jpg"
 
 
   <div class="   
