--- a/Clothes.html
+++ b/Clothes.html
@@ -31,8 +31,8 @@
  
     </head>
 <img src="kfashlogo.png" class="logo"> 
-<nav><ul><li><a href="index.html">Home</a></li> 
-<li><a href="clothes.html">Clothes</a></li>
+<nav><ul><li><a href="home.html">Home</a></li> 	
+<li><a href="https://karla1369.github.io/Kfashion/Clothes.html">Clothes</a></li>
 <li><a href="jewelry.html">Jewelry</a></li>
 <li><a href="Accessories.html">Accessories</a></li> 
 </ul></nav>
