--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<div class="column"> </div>
 	 <div  class="column"> <img src="kfashlogo.png" class="logo"> </div>
 	</div>
-<nav><ul><li><a href="home.html">Home</a></li> 	
+<nav><ul><li><a href="index.html">Home</a></li> 	
 <li><a href="https://karla1369.github.io/Kfashion/Clothes.html">Clothes</a></li>
 <li><a href="jewelry.html">Jewelry</a></li>
 <li><a href="Accessories.html">Accessories</a></li> 
