--- a/Accessories.html
+++ b/Accessories.html
@@ -29,8 +29,9 @@
  
     </head>
 <img src="kfashlogo.png" class="logo"> 
-<nav><ul><li><a href="index.html">Home</a></li> 
-<li><a href="clothes.html">Clothes</a></li>
+<nav><ul><li><a href="index.html">Home</a></li> 	
+<li><a href="https://karla1369.github.io/Kfashion/Clothes.html">Clothes</a></li>
+<li><a href="jewelry.html">Jewelry</a></li>
 <li><a href="Accessories.html">Accessories</a></li> 
 </ul></nav>
 <img src="trinh-minh-th-MQOA0n3chA8-unsplash.jpg">
