--- a/Clothes.html
+++ b/Clothes.html
@@ -31,7 +31,7 @@
  
     </head>
 <img src="kfashlogo.png" class="logo"> 
-<nav><ul><li><a href="home.html">Home</a></li> 	
+<nav><ul><li><a href="index.html">Home</a></li> 	
 <li><a href="https://karla1369.github.io/Kfashion/Clothes.html">Clothes</a></li>
 <li><a href="jewelry.html">Jewelry</a></li>
 <li><a href="Accessories.html">Accessories</a></li> 
