--- a/Accessories.html
+++ b/Accessories.html
@@ -25,6 +25,8 @@
 		img{width: 200px;
 		padding: 85px; 
 		} 
+	.product-image {padding: 1rem; background-color: #fff; 	
+		box-shadow: 5px 5px 15px 5px #000000;}	
 </style>
  
     </head>
