--- a/Accessories.html
+++ b/Accessories.html
@@ -39,7 +39,9 @@
 
 
 <img class= "product-image" src="creative-headline-se3GNrXjtdQ-unsplash.jpg">
-
+<img class= "product-image" src="drilling-XBqD7PZp5mQ-unsplash.jpg">
+<img class= "product-image" src="korie-cull-QWIJ50qBAJ8-unsplash.jpg">
+<img class= "product-image" src="creative-headline-APNnyM36puU-unsplash.jpg">
 <img class= "product-image" src="max-anderson-acCPKySN8Xc-unsplash.jpg">
 
   <div class="   
