--- a/Accessories.html
+++ b/Accessories.html
@@ -42,6 +42,13 @@
 <img class= "product-image" src="creative-headline-APNnyM36puU-unsplash.jpg">
 <img class= "product-image" src="korie-cull-QWIJ50qBAJ8-unsplash.jpg">
 <img class= "product-image" src="max-anderson-acCPKySN8Xc-unsplash.jpg">
+<img class= "product-image" src="lena-myzovets-g0SC7tOBen4-unsplash.jpg">
+<img class= "product-image" src="ksenia-makagonova-8c8ptWqVTJ8-unsplash.jpg">
+<img class= "product-image" src="ani-kolleshi-7XkQ_qmh2DE-unsplash.jpg">
+
+
+
+
 
   <div class="   
      col-xs-1
