--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 		img{width: 200px;
 		padding: 85px; 
 		} 
+		.product-image {padding: 1rem; background-color: #fff; 	
+		box-shadow: 5px 5px 15px 5px #000000;}		
 	</style>
 <link rel = "stylesheet" href = "columns.css" />
 	</head>
