--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 <li><a href="jewelry.html">Jewelry</a></li>
 <li><a href="Accessories.html">Accessories</a></li> 
 </ul></nav>
-<img src="marionel-luciano-f615lHRUJqw-unsplash (1).jpg">
-<img src="max-anderson-acCPKySN8Xc-unsplash.jpg">
-<img src="olive-tatiane-ImEzF9B91Mk-unsplash.jpg">
+<img class= "product-image" src="marionel-luciano-f615lHRUJqw-unsplash (1).jpg">
+<img class= "product-image" src="max-anderson-acCPKySN8Xc-unsplash.jpg">
+<img class= "product-image" src="olive-tatiane-ImEzF9B91Mk-unsplash.jpg">
 <div class="   
             col-xs-1
 	    col-sm-2
