--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <link rel = "stylesheet" href = "columns.css" />
 	</head>
 <body>
- <div class="columncontainer"> 
+ <div class="columncontainer website-header"> 
 	<div class="column"> </div>
 	 <div  class="column"> <img src="kfashlogo.png" class="logo"> </div>
 	</div>
