--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
 		padding: 85px; 
 		} 
 		.product-image {padding: 1rem; background-color: #fff; 	
-		box-shadow: 5px 5px 15px 5px #000000;}		
+		box-shadow: 5px 5px 15px 5px #000000;}	
+		
+		.product-image {
+    padding: 1rem;
+    background-color: #fff;
+    box-shadow: 5px 5px 15px 5px #000000;
+    margin: 10px;}		
+	
 	</style>
 <link rel = "stylesheet" href = "columns.css" />
 	</head>
