--- a/jewelry.html
+++ b/jewelry.html
@@ -26,7 +26,13 @@
 			padding: 85px; }
 		.product-image {padding: 1rem; background-color: #fff; 	
 		box-shadow: 5px 5px 15px 5px #000000;}	
-</style>
+	
+	.product-image {
+    padding: 1rem;
+    background-color: #fff;
+    box-shadow: 5px 5px 15px 5px #000000;
+    margin: 10px;}
+	</style>
  
     </head>
 <img src="kfashlogo.png" class="logo"> 
