--- a/Accessories.html
+++ b/Accessories.html
@@ -27,6 +27,12 @@
 		} 
 	.product-image {padding: 1rem; background-color: #fff; 	
 		box-shadow: 5px 5px 15px 5px #000000;}	
+	
+	.product-image {
+    padding: 1rem;
+    background-color: #fff;
+    box-shadow: 5px 5px 15px 5px #000000;
+    margin: 10px;}	
 </style>
  
     </head>
