--- a/Accessories.html
+++ b/Accessories.html
@@ -36,6 +36,7 @@
 </style>
  
     </head>
+<div class="columncontainer website-header"> 
 <img src="kfashlogo.png" class="logo"> 
 <nav><ul><li><a href="index.html">Home</a></li> 	
 <li><a href="https://karla1369.github.io/Kfashion/Clothes.html">Clothes</a></li>
