--- a/index.html
+++ b/index.html
@@ -28,17 +28,16 @@
     padding: 1rem;
     background-color: #fff;
     box-shadow: 5px 5px 15px 5px #000000;
-    margin: 10px;}		
-	
+    margin: 10px;}
+		.website-header { background-image: url(
+	  artiom-vallat-mFrLqRZMx7o-unsplash.jpg);
+			background-size: cover:}	
 	</style>
 <link rel = "stylesheet" href = "columns.css" />
 	</head>
 <body>
  <div class="columncontainer website-header"> 
 	
-	 background-image: url(
-	  artiom-vallat-mFrLqRZMx7o-unsplash.jpg);
-	 background-size: cover:
 	 
 	<div class="column"> </div>
 	 <div  class="column"> <img src="kfashlogo.png" class="logo"> </div>
