--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     margin: 10px;}
 		.website-header { background-image: url(
 	  artiom-vallat-mFrLqRZMx7o-unsplash.jpg);
-			background-size: cover:}	
+			background-size: cover;}	
 	</style>
 <link rel = "stylesheet" href = "columns.css" />
 	</head>
