--- a/Clothes.html
+++ b/Clothes.html
@@ -50,7 +50,19 @@
 <img class= "product-image" src="brian-wangenheim-DO9FFITYQz4-unsplash.jpg">
 <img class= "product-image" src="brian-wangenheim-9U18fiowwbw-unsplash.jpg">
 <img class= "product-image" src="nojan-namdar-v0y2CjX7Vj0-unsplash.jpg">
-
+<img class= "product-image" src="aura-chouette-WLSiDqaBeuc-unsplash.jpg">
+<img class= "product-image" src="alex-blajan-6ozhV5b9ims-unsplash.jpg">
+<img class= "product-image" src="colours-of-turkey-p7I07kuPSyU-unsplash (1).jpg">
+<img class= "product-image" src="
+<img class= "product-image" src="
+<img class= "product-image" src="
+<img class= "product-image" src="
+<img class= "product-image" src="
+<img class= "product-image" src="
+<img class= "product-image" src="
+<img class= "product-image" src="
+<img class= "product-image" src="
+<img class= "product-image" src="
 <div class="   
      col-xs-1
 	    col-sm-2
