--- a/Clothes.html
+++ b/Clothes.html
@@ -57,8 +57,8 @@
 <img class= "product-image" src="laura-chouette-KjHCeJgnps8-unsplash.jpg">
 <img class= "product-image" src="ana-itonishvili-iM0_ZkaexlI-unsplash.jpg">
 <img class= "product-image" src="sonnie-hiles-jS9ZsQOQGIA-unsplash.jpg">
-<img class= "product-image" src="
-<img class= "product-image" src="
+<img class= "product-image" src="dmitry-vechorko-5K0dTATquuE-unsplash.jpg">
+<img class= "product-image" src="napat-saeng-1w7Z_BzML2Y-unsplash.jpg">
 <img class= "product-image" src="
 <img class= "product-image" src="
 <img class= "product-image" src="
