--- a/Clothes.html
+++ b/Clothes.html
@@ -48,9 +48,9 @@
 <img class= "product-image" src="roman-shilin-Wx8pnzc9bRk-unsplash.jpg">  
 <img class= "product-image" src="alex-blajan-6ozhV5b9ims-unsplash.jpg">
 <img class= "product-image" src="colours-of-turkey-p7I07kuPSyU-unsplash (1).jpg">
-<img class= "product-image" src="
-<img class= "product-image" src="
-<img class= "product-image" src="
+<img class= "product-image" src="chalo-garcia-zrF5KQGfz5U-unsplash.jpg">
+<img class= "product-image" src="chalo-garcia-bAN-CCw_PWA-unsplash.jpg">
+<img class= "product-image" src="chalo-garcia-alcLDJ6QxD0-unsplash.jpg">
 <img class= "product-image" src="
 <img class= "product-image" src="
 <img class= "product-image" src="dom-hill-nimElTcTNyY-unsplash.jpg">
