--- a/Clothes.html
+++ b/Clothes.html
@@ -51,8 +51,8 @@
 <img class= "product-image" src="chalo-garcia-zrF5KQGfz5U-unsplash.jpg">
 <img class= "product-image" src="chalo-garcia-bAN-CCw_PWA-unsplash.jpg">
 <img class= "product-image" src="chalo-garcia-alcLDJ6QxD0-unsplash.jpg">
-<img class= "product-image" src="
-<img class= "product-image" src="
+<img class= "product-image" src="liliia-beda-qVMna-UqTUY-unsplash.jpg">
+<img class= "product-image" src="jeffery-erhunse-mPHPraJk-eA-unsplash.jpg">
 <img class= "product-image" src="dom-hill-nimElTcTNyY-unsplash.jpg">
 <img class= "product-image" src="brian-wangenheim-DO9FFITYQz4-unsplash.jpg">
 <img class= "product-image" src="brian-wangenheim-9U18fiowwbw-unsplash.jpg">
