--- a/Clothes.html
+++ b/Clothes.html
@@ -33,6 +33,13 @@
     background-color: #fff;
     box-shadow: 5px 5px 15px 5px #000000;
     margin: 10px;}	
+	
+	.website-header { background-image: url( 
+			pawel-czerwinski-QRghuf5yTA4-unsplash.jpg);
+			background-size: cover;}	
+	
+	
+	
 	</style>
  
     </head>
