--- a/jewelry.html
+++ b/jewelry.html
@@ -42,9 +42,9 @@
 <li><a href="jewelry.html">Jewelry</a></li>
 <li><a href="Accessories.html">Accessories</a></li> 
 </ul></nav>
-<img class= "product-image" src="">
-<img class= "product-image" src="">
-<img class= "product-image" src=""
+<img class= "product-image" src="kolya-korzh-HFogW6fHv4E-unsplash.jpg">
+<img class= "product-image" src="sabrinna-ringquist-ttMO9io6uMY-unsplash.jpg">
+<img class= "product-image" src="philippe-van-doninck-I4SU-rCPbX0-unsplash.jpg">
 <img class= "product-image" src="">
 <img class= "product-image" src="">
 <img class= "product-image" src="">
