--- a/jewelry.html
+++ b/jewelry.html
@@ -45,8 +45,8 @@
 <img class= "product-image" src="kolya-korzh-HFogW6fHv4E-unsplash.jpg">
 <img class= "product-image" src="sabrinna-ringquist-ttMO9io6uMY-unsplash.jpg">
 <img class= "product-image" src="philippe-van-doninck-I4SU-rCPbX0-unsplash.jpg">
-<img class= "product-image" src="        ">
-<img class= "product-image" src="        ">
+<img class= "product-image" src="eleni-koureas-0Hv7W_p410w-unsplash (1).jpg">
+<img class= "product-image" src="daihana-monares-3BEyMds-Oo0-unsplash.jpg">
 <img class= "product-image" src="        ">
 <img class= "product-image" src="        ">
 <img class= "product-image" src="        ">
