--- a/jewelry.html
+++ b/jewelry.html
@@ -47,11 +47,11 @@
 <img class= "product-image" src="philippe-van-doninck-I4SU-rCPbX0-unsplash.jpg">
 <img class= "product-image" src="eleni-koureas-0Hv7W_p410w-unsplash (1).jpg">
 <img class= "product-image" src="daihana-monares-3BEyMds-Oo0-unsplash.jpg">
-<img class= "product-image" src="        ">
-<img class= "product-image" src="        ">
-<img class= "product-image" src="        ">
-<img class= "product-image" src="">
-<img class= "product-image" src="">  
+<img class= "product-image" src="alexandra-lammerink-LV5gOg3c1Kk-unsplash (1).jpg">
+<img class= "product-image" src="olive-tatiane-ImEzF9B91Mk-unsplash (1).jpg">
+<img class= "product-image" src="sabrinna-ringquist-u1Hv_erOQH0-unsplash.jpg">
+<img class= "product-image" src="         ">
+<img class= "product-image" src="         ">  
 <img class= "product-image" src="">
 <img class= "product-image" src="">
 <img class= "product-image" src="">
