--- a/jewelry.html
+++ b/jewelry.html
@@ -50,13 +50,13 @@
 <img class= "product-image" src="alexandra-lammerink-LV5gOg3c1Kk-unsplash (1).jpg">
 <img class= "product-image" src="olive-tatiane-ImEzF9B91Mk-unsplash (1).jpg">
 <img class= "product-image" src="sabrinna-ringquist-u1Hv_erOQH0-unsplash.jpg">
-<img class= "product-image" src="         ">
-<img class= "product-image" src="         ">  
-<img class= "product-image" src="">
-<img class= "product-image" src="">
-<img class= "product-image" src="">
-<img class= "product-image" src="">
-<img class= "product-image" src="">    
+<img class= "product-image" src="olive-tatiane-jth0xqNgu-g-unsplash.jpg">
+<img class= "product-image" src="olive-tatiane-1f989kJpIXY-unsplash (1).jpg">  
+<img class= "product-image" src="     ">
+<img class= "product-image" src="     ">
+<img class= "product-image" src="     ">
+<img class= "product-image" src="     ">
+<img class= "product-image" src="     ">    
 <img class= "product-image" src="">
 <img class= "product-image" src="">
 <img class= "product-image" src="">
