--- a/jewelry.html
+++ b/jewelry.html
@@ -52,9 +52,9 @@
 <img class= "product-image" src="sabrinna-ringquist-u1Hv_erOQH0-unsplash.jpg">
 <img class= "product-image" src="olive-tatiane-jth0xqNgu-g-unsplash.jpg">
 <img class= "product-image" src="olive-tatiane-1f989kJpIXY-unsplash (1).jpg">  
-<img class= "product-image" src="     ">
-<img class= "product-image" src="     ">
-<img class= "product-image" src="     ">
+<img class= "product-image" src="dillon-kydd-dB2ekZjZMLE-unsplash.jpg">
+<img class= "product-image" src="sabrinna-ringquist-2z7MxnXQs3k-unsplash.jpg">
+<img class= "product-image" src="samar-ahmad-zz6-LqiW4mY-unsplash.jpg">
 <img class= "product-image" src="     ">
 <img class= "product-image" src="     ">    
 <img class= "product-image" src="">
