--- a/jewelry.html
+++ b/jewelry.html
@@ -55,8 +55,8 @@
 <img class= "product-image" src="dillon-kydd-dB2ekZjZMLE-unsplash.jpg">
 <img class= "product-image" src="sabrinna-ringquist-2z7MxnXQs3k-unsplash.jpg">
 <img class= "product-image" src="samar-ahmad-zz6-LqiW4mY-unsplash.jpg">
-<img class= "product-image" src="     ">
-<img class= "product-image" src="     ">    
+<img class= "product-image" src="samar-ahmad--nKCbZlOHek-unsplash (1).jpg">
+<img class= "product-image" src="philippe-van-doninck-hoC_u_9yJ_Y-unsplash.jpg">    
 <img class= "product-image" src="">
 <img class= "product-image" src="">
 <img class= "product-image" src="">
