--- a/jewelry.html
+++ b/jewelry.html
@@ -57,11 +57,11 @@
 <img class= "product-image" src="samar-ahmad-zz6-LqiW4mY-unsplash.jpg">
 <img class= "product-image" src="samar-ahmad--nKCbZlOHek-unsplash (1).jpg">
 <img class= "product-image" src="philippe-van-doninck-hoC_u_9yJ_Y-unsplash.jpg">    
-<img class= "product-image" src="">
-<img class= "product-image" src="">
-<img class= "product-image" src="">
-<img class= "product-image" src="">
-<img class= "product-image" src="">
+<img class= "product-image" src="engin-akyurt-FsuqRsukQRA-unsplash.jpg">
+<img class= "product-image" src="alyssa-hurley-IdU1Si3wJ-I-unsplash.jpg">
+<img class= "product-image" src="philippe-van-doninck-cpox6XUCDkg-unsplash.jpg">
+<img class= "product-image" src="      ">
+<img class= "product-image" src="      ">
 	
 	<div class="   
      col-xs-1
