--- a/jewelry.html
+++ b/jewelry.html
@@ -60,8 +60,8 @@
 <img class= "product-image" src="engin-akyurt-FsuqRsukQRA-unsplash.jpg">
 <img class= "product-image" src="alyssa-hurley-IdU1Si3wJ-I-unsplash.jpg">
 <img class= "product-image" src="philippe-van-doninck-cpox6XUCDkg-unsplash.jpg">
-<img class= "product-image" src="      ">
-<img class= "product-image" src="      ">
+<img class= "product-image" src="olive-tatiane-arVuyizx_fw-unsplash.jpg">
+<img class= "product-image" src="cornelia-ng-hxtKsjWSd3M-unsplash (1).jpg">
 	
 	<div class="   
      col-xs-1
