--- a/jewelry.html
+++ b/jewelry.html
@@ -33,8 +33,10 @@
     box-shadow: 5px 5px 15px 5px #000000;
     margin: 10px;}
 	</style>
- 
-    </head>
+ .website-header { background-image: url( 
+		pawel-czerwinski-hR545CzxZxk-unsplash.jpg);
+			background-size: cover;}	
+</head>
 <div class="columncontainer website-header"> 
 <img src="kfashlogo.png" class="logo"> 
 <nav><ul><li><a href="index.html">Home</a></li> 	
