--- a/Accessories.html
+++ b/Accessories.html
@@ -54,11 +54,12 @@
 <img class= "product-image" src="lena-myzovets-g0SC7tOBen4-unsplash.jpg">
 <img class= "product-image" src="ksenia-makagonova-8c8ptWqVTJ8-unsplash.jpg">
 <img class= "product-image" src="ani-kolleshi-7XkQ_qmh2DE-unsplash.jpg">
+<img class= "product-image" src="designecologist-avH92dJItyk-unsplash.jpg">
 <img class= "product-image" src="          ">
 <img class= "product-image" src="          ">
-
-
-
+<img class= "product-image" src="          ">	
+<img class= "product-image" src="          ">
+<img class= "product-image" src="          ">
   <div class="   
      col-xs-1
 	    col-sm-2
