--- a/Accessories.html
+++ b/Accessories.html
@@ -58,8 +58,8 @@
 <img class= "product-image" src="asiya-kiev-gUzOZaswagA-unsplash.jpg">
 <img class= "product-image" src="thea-hdc-cvJySBfdyOw-unsplash.jpg">
 <img class= "product-image" src="sinitta-leunen-oJCpY9bERFA-unsplash.jpg">	
-<img class= "product-image" src="          ">
-<img class= "product-image" src="          ">
+<img class= "product-image" src="gabrielle-henderson-nUKN8Zat5dA-unsplash.jpg">
+<img class= "product-image" src="eightpression-vhVRLTfbbrY-unsplash.jpg">
   <div class="   
      col-xs-1
 	    col-sm-2
