--- a/jewelry.html
+++ b/jewelry.html
@@ -27,7 +27,9 @@
 		.product-image {padding: 1rem; background-color: #fff; 	
 		box-shadow: 5px 5px 15px 5px #000000;}	
 	
-
+.website-header { background-image: url( 
+			pawel-czerwinski-QRghuf5yTA4-unsplash.jpg);
+			background-size: cover;}	
  	
 </head>
 <div class="columncontainer website-header"> 
