--- a/Accessories.html
+++ b/Accessories.html
@@ -33,6 +33,12 @@
     background-color: #fff;
     box-shadow: 5px 5px 15px 5px #000000;
     margin: 10px;}	
+	
+	.website-header { background-image: url( 
+			pawel-czerwinski-QRghuf5yTA4-unsplash.jpg);
+			background-size: cover;}	
+	
+	
 </style>
  
     </head>
@@ -43,8 +49,6 @@
 <li><a href="jewelry.html">Jewelry</a></li>
 <li><a href="Accessories.html">Accessories</a></li> 
 </ul></nav>
-
-
 <img class= "product-image" src="creative-headline-se3GNrXjtdQ-unsplash.jpg">
 <img class= "product-image" src="creative-headline-APNnyM36puU-unsplash.jpg">
 <img class= "product-image" src="leisara-FskOHt3xuig-unsplash.jpg">
