--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 <img class= "product-image" src="max-anderson-acCPKySN8Xc-unsplash.jpg">
 <img class= "product-image" src="olive-tatiane-ImEzF9B91Mk-unsplash.jpg">
 <div class="   
-            col-xs-1
+            <div class="   
+     col-xs-1
 	    col-sm-2
 	    col-md-4
 	    col-lg-6">
@@ -61,9 +62,7 @@
 	<div> store hours</div>
 	<div> monday-friday 9:00-6:00</div>
 	<div> saturday 10:00-7:00</div>
-	<div> sunday closed</div>
+	<div> sunday closet</div>
 	</body>
 	</html>
 
-
- 
