--- a/index.html
+++ b/index.html
@@ -47,10 +47,12 @@
 <li><a href="jewelry.html">Jewelry</a></li>
 <li><a href="Accessories.html">Accessories</a></li> 
 </ul></nav>
-<img class= "product-image" src="marionel-luciano-f615lHRUJqw-unsplash (1).jpg">
-<img class= "product-image" src="max-anderson-acCPKySN8Xc-unsplash.jpg">
-<img class= "product-image" src="olive-tatiane-ImEzF9B91Mk-unsplash.jpg">
-<div class="   
+<img class= "product-image" src="corey-saldana-d3yqfGgjYoA-unsplash.jpg">
+<img class= "product-image" src="corey-saldana-6872DDkFTqc-unsplash.jpg">
+<img class= "product-image" src="corey-saldana-mD15zdyRPJ0-unsplash.jpg">
+<img class= "product-image" src="
+<img class= "product-image" src="
+	<div class="   
             <div class="   
      col-xs-1
 	    col-sm-2
