--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 <img class= "product-image" src="corey-saldana-d3yqfGgjYoA-unsplash.jpg">
 <img class= "product-image" src="corey-saldana-6872DDkFTqc-unsplash.jpg">
 <img class= "product-image" src="corey-saldana-mD15zdyRPJ0-unsplash.jpg">
-<img class= "product-image" src="
-<img class= "product-image" src="
-	<div class="   
+<img class= "product-image" src="corey-saldana-ljEaeP96xME-unsplash.jpg">
+<img class= "product-image" src="corey-saldana-TFtyWvy31i4-unsplash.jpg	">
+    
             <div class="   
      col-xs-1
 	    col-sm-2
