--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	<div> store hours</div>
 	<div> monday-friday 9:00-6:00</div>
 	<div> saturday 10:00-7:00</div>
-	<div> sunday closet</div>
+	<div> sunday closed</div>
 	</body>
 	</html>
 
