--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <img class= "product-image" src="corey-saldana-mD15zdyRPJ0-unsplash.jpg">
 <img class= "product-image" src="corey-saldana-ljEaeP96xME-unsplash.jpg">
 <img class= "product-image" src="corey-saldana-TFtyWvy31i4-unsplash.jpg	">
-<img class= "product-image" src="corey-saldana-kJpL9QiSnKs-unsplash (1).jpg
+<img class= "product-image" src="corey-saldana-kJpL9QiSnKs-unsplash (1).jpg">
 <img class= "product-image" src="corey-saldana-OH2S9XAcLhc-unsplash.jpg">
 <img class= "product-image" src="david-nieto-PN_vlniJa78-unsplash.jpg">
 	
