--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 <img class= "product-image" src="corey-saldana-kJpL9QiSnKs-unsplash (1).jpg">
 <img class= "product-image" src="corey-saldana-OH2S9XAcLhc-unsplash.jpg">
 <img class= "product-image" src="david-nieto-PN_vlniJa78-unsplash.jpg">
-	
-	
+<img class= "product-image" src="mehrab-zahedbeigi-q9vzY04LKUs-unsplash.jpg">
+<img class= "product-image" src="oleg-ivanov-fPKgvXNSNqg-unsplash.jpg">	
 	
 	
 	
