--- a/jewelry.html
+++ b/jewelry.html
@@ -30,7 +30,7 @@
 .website-header { background-image: url( 
 			pawel-czerwinski-QRghuf5yTA4-unsplash.jpg);
 			background-size: cover;}	
- 	
+ 	</style>
 </head>
 <div class="columncontainer website-header"> 
 <img src="kfashlogo.png" class="logo"> 
