--- a/jewelry.html
+++ b/jewelry.html
@@ -32,8 +32,8 @@
 			background-size: cover;}	
  	</style>
 </head>
-<div class="columncontainer website-header"> 
-<img src="kfashlogo.png" class="logo"> 
+<div class="columncontainer website-header">
+	<img src="kfashlogo.png" class="logo"> </div>
 <nav><ul><li><a href="index.html">Home</a></li> 	
 <li><a href="https://karla1369.github.io/Kfashion/Clothes.html">Clothes</a></li>
 <li><a href="jewelry.html">Jewelry</a></li>
