--- a/Clothes.html
+++ b/Clothes.html
@@ -1,5 +1,6 @@
 <head>
-  <link
+<title>K fashion: clothes</title>
+<link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   /> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" >
