--- a/jewelry.html
+++ b/jewelry.html
@@ -1,5 +1,5 @@
 <head>
-<title>jewelry</title>	
+<title>K fashion: jewelry</title>	
 <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
