--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <img class= "product-image" src="oleg-ivanov-fPKgvXNSNqg-unsplash.jpg">	
 	
 	
-	
+<footer>	
             <div class="   
      col-xs-1
 	    col-sm-2
@@ -72,7 +72,7 @@
 	<div> store hours</div>
 	<div> monday-friday 9:00-6:00</div>
 	<div> saturday 10:00-7:00</div>
-	<div> sunday closed</div>
+	<div> sunday closed</div></footer>
 	</body>
 	</html>
 
