--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 	<title>K fashion</title>
  	<style>
-	.logo {width: 20%;}
+		footer{ background-color: #75ffe3; padding: 10px;} 
+			
+		.logo {width: 20%;}
 	nav ul {
 	display: flex;
 	list-style-type: none;
