--- a/Accessories.html
+++ b/Accessories.html
@@ -44,7 +44,11 @@
  
     </head>
 <div class="columncontainer website-header"> 
-<img src="kfashlogo.png" class="logo"> 
+	
+	 
+	<div class="column"> </div>
+	 <div  class="column"> <img src="kfashlogo.png" class="logo"> </div>
+	</div>
 <nav><ul><li><a href="index.html">Home</a></li> 	
 <li><a href="https://karla1369.github.io/Kfashion/Clothes.html">Clothes</a></li>
 <li><a href="jewelry.html">Jewelry</a></li>
