--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>K fashion</title>
  	<style>
-		footer{ background-color: #75ffe3; padding: 10px;} 
+		footer{ background-color: #ffadef; padding: 10px;} 
 			
 		.logo {width: 20%;}
 	nav ul {
