--- a/jewelry.html
+++ b/jewelry.html
@@ -70,7 +70,8 @@
 <img class= "product-image" src="olive-tatiane-arVuyizx_fw-unsplash.jpg">
 <img class= "product-image" src="cornelia-ng-hxtKsjWSd3M-unsplash (1).jpg">
 	
-	<div class="   
+<footer>	
+            <div class="   
      col-xs-1
 	    col-sm-2
 	    col-md-4
@@ -81,6 +82,6 @@
 	<div> store hours</div>
 	<div> monday-friday 9:00-6:00</div>
 	<div> saturday 10:00-7:00</div>
-	<div> sunday closet</div>
+	<div> sunday closed</div></footer>
 	</body>
 	</html>
