--- a/Accessories.html
+++ b/Accessories.html
@@ -69,7 +69,9 @@
 <img class= "product-image" src="sinitta-leunen-oJCpY9bERFA-unsplash.jpg">	
 <img class= "product-image" src="gabrielle-henderson-nUKN8Zat5dA-unsplash.jpg">
 <img class= "product-image" src="eightpression-vhVRLTfbbrY-unsplash.jpg">
-  <div class="   
+   
+<footer>	
+            <div class="   
      col-xs-1
 	    col-sm-2
 	    col-md-4
@@ -80,6 +82,6 @@
 	<div> store hours</div>
 	<div> monday-friday 9:00-6:00</div>
 	<div> saturday 10:00-7:00</div>
-	<div> sunday closet</div>
+	<div> sunday closed</div></footer>
 	</body>
 	</html>
