--- a/Clothes.html
+++ b/Clothes.html
@@ -7,6 +7,9 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />	
 	
 <style>
+	
+	footer{ background-color: #ffadef; padding: 10px;} 	
+	
 	.logo {width: 20%;}
 	nav ul {
 	display: flex;
