--- a/Clothes.html
+++ b/Clothes.html
@@ -79,7 +79,8 @@
 <img class= "product-image" src="sonnie-hiles-jS9ZsQOQGIA-unsplash.jpg">
 <img class= "product-image" src="dmitry-vechorko-5K0dTATquuE-unsplash.jpg">
 <img class= "product-image" src="napat-saeng-1w7Z_BzML2Y-unsplash.jpg">
-<div class="   
+<footer>	
+            <div class="   
      col-xs-1
 	    col-sm-2
 	    col-md-4
@@ -90,6 +91,7 @@
 	<div> store hours</div>
 	<div> monday-friday 9:00-6:00</div>
 	<div> saturday 10:00-7:00</div>
-	<div> sunday closet</div>
+	<div> sunday closed</div></footer>
 	</body>
 	</html>
+
